# snout

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
snout-app/: package-lock.json  package.json
snout-app/src/: App.css  App.tsx
snout-app/src-tauri/: Cargo.toml  tauri.conf.json
snout-app/src-tauri/icons/: icon.icns
snout-app/src-tauri/src/: lib.rs  main.rs
src/: chunker.rs  embed.rs  extract.rs  hybrid.rs  indexer.rs  lib.rs  main.rs  paths.rs  vectors.rs
