[package]
name = "snout"
version = "0.1.0"
edition = "2021"
description = "Search words, topics and content across all your files, locally."
license = "MIT"
repository = "https://github.com/Blazi2002/snout"
readme = "README.md"
authors = ["Blazi2002"]

[dependencies]
calamine = "0.35.0"
docx-rs = "0.4.20"
pdf-extract = "0.10.0"
tantivy = "0.24"
walkdir = "2.5.0"
time = "=0.3.47"
blake3 = "1.8.5"
fastembed = "5.16.1"
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
